Code refactor after mentor review.